--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5942,3 +5942,173 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	keywords = {Entropy, Root mean square error, Simple random sampling, Ranked set sampling, Double ranked set sampling},
 	abstract = {In this paper, three new entropy estimators of continuous random variables are proposed using simple random sampling (SRS), ranked set sampling (RSS) and double ranked set sampling (DRSS) techniques. The new estimators are obtained by modifying the estimators suggested by Noughabi and Arghami (2010) and Ebrahim et al. (1994). In terms of the root mean square error (RMSEs) and bias values, a numerical comparison is considered to compare the suggested estimators with Vasicek’s (1976) estimator. Our results reveal that the suggested estimators have smaller mean squared error than Vasicek’s estimator. Also, the suggested estimators under double ranked set sampling are more efficient than other suggested estimators based on SRS and RSS.}
 }
+
+@article{Wieczorkowski1999,
+	author = {R. Wieczorkowski  and  P. Grzegorzewski },
+	title = {Entropy estimators‐improvements and comparisons},
+	journal = {Communications in Statistics - Simulation and Computation},
+	volume = {28},
+	number = {2},
+	pages = {541-567},
+	year  = {1999},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/03610919908813564},
+	URL = { 
+	https://doi.org/10.1080/03610919908813564
+	},
+	eprint = { 
+	https://doi.org/10.1080/03610919908813564
+	}
+}
+
+@ARTICLE{Noughabi2010, 
+	author = {A. H. Noughabi and N. R Arghami},  
+	title = {A new estimator of entropy}, 
+	volume = {9}, 
+	number = {1},  
+	abstract ={In this paper we propose an estimator of the entropy of a continuous random variable. The estimator is obtained by modifying the estimator proposed by Vasicek (1976). Consistency of estimator is proved, and comparisons are made with Vasicek’s estimator (1976), van Es’s estimator (1992), Ebrahimi et al.’s estimator (1994) and Correa’s estimator (1995). The results indicate that the proposed estimator has smaller mean squared error than above estimators. },  
+	URL = {http://jirss.irstat.ir/article-1-81-en.html},  
+	eprint = {http://jirss.irstat.ir/article-1-81-en.pdf},  
+	journal = {Journal of the Iranian Statistical Society},   
+	doi = {},  
+	year = {2010}  
+}
+
+@article{Calinski1974,
+	author = {T. Cali\'nski  and J. Harabasz },
+	title = {A dendrite method for cluster analysis},
+	journal = {Communications in Statistics},
+	volume = {3},
+	number = {1},
+	pages = {1-27},
+	year  = {1974},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/03610927408827101},	
+	URL = {https://www.tandfonline.com/doi/abs/10.1080/03610927408827101},
+	eprint = {https://www.tandfonline.com/doi/pdf/10.1080/03610927408827101}	
+}
+
+@ARTICLE{Davies1979,	
+	author={Davies, D. L. and Bouldin, D. W.},	
+	journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+	title={A Cluster Separation Measure}, 	
+	year={1979},	
+	volume={PAMI-1},	
+	number={2},	
+	pages={224-227},	
+	doi={10.1109/TPAMI.1979.4766909}}
+
+@INPROCEEDINGS{Niharika2017,	
+	author={Niharika, E. and Adeeba, Hafsah and Krishna, A. Shiva Rama and Yugander, P.},	
+	booktitle={2017 International Conference on IoT and Application (ICIOT)}, 	
+	title={K-means based noisy SAR image segmentation using median filtering and otsu method}, 
+	year={2017},
+	volume={},
+	number={},
+	pages={1-4},
+	doi={10.1109/ICIOTA.2017.8073630}}
+
+@ARTICLE{Liu2019,
+	author={Liu, L. and Jia, Z. and Yang, J. and Kasabov, N.},
+	journal={IEEE Access}, 
+	title={SAR Image Change Detection Based on Mathematical Morphology and the K-Means Clustering Algorithm}, 
+	year={2019},
+	volume={7},
+	number={},
+	pages={43970-43978},
+	doi={10.1109/ACCESS.2019.2908282}}
+
+@Inbook{Vapnik1998,
+	author="Vapnik, V.",
+	editor="Suykens, Johan A. K.
+	and Vandewalle, Joos",
+	title="The Support Vector Method of Function Estimation",
+	bookTitle="Nonlinear Modeling: Advanced Black-Box Techniques",
+	year="1998",
+	publisher="Springer US",
+	address="Boston, MA",
+	pages="55--85",
+	abstract="This chapter describes the Support Vector technique for function estimation problems such as pattern recognition, regression estimation, and solving linear operator equations. It shows that for the Support Vector method both the quality of solution and the complexity of the solution does not depend directly on the dimensionality of an input space. Therefore, on the basis of this technique one can obtain a good estimate using a given number of high-dimensional data.",
+	isbn="978-1-4615-5703-6",
+	doi="10.1007/978-1-4615-5703-6_3",
+	url="https://doi.org/10.1007/978-1-4615-5703-6_3"
+}
+
+@book{Vapnik1995,
+	author = {Vapnik, V. N.},
+	title = {The Nature of Statistical Learning Theory},
+	year = {1995},
+	isbn = {0387945598},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg}
+}
+
+@InProceedings{Subashini2014,
+	author="Subashini, P. and Krishnaveni, M. and Ane, B. and Roller, D.",
+	editor="Abraham, Ajith
+	and Kr{\"o}mer, Pavel
+	and Sn{\'a}{\v{s}}el, V{\'a}clav",
+	title="{SVM}-Based Classification for Identification of Ice Types in SAR Images Using Color Perception Phenomena",
+	booktitle="Innovations in Bio-inspired Computing and Applications",
+	year="2014",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="285--293",
+	abstract="In rise of global temperatures, the formation of ice in freshwater like rivers and lakes are apparent to high condition which has to be significantly monitored for the importance of forecasting and hydropower generation. For this research, Synthetic Aperture Radar (SAR) based images gives good support in mapping the variation between the remote sensing data analysis. This paper presents an approach to map the different target signatures available in the radar image using support vector machine by providing limited amount of reference data. The proposed methodology takes a preprocess expansion of transforming the grayscale image into a synthetic color image which is often used with radar data to improve the display of subtle large-scale features. Hue Saturation Value based sharpened Synthetic Aperture Radar images are used as the input to supervised classifier in which evaluation metrics are considered to assess both the phase of the approach. Based on the evaluation, Support Vector Machine classifier with linear kernel has been known to strike the right balance between accuracy obtained on a given finite amount of training patterns and the facility to generalize to undetected data.",
+	isbn="978-3-319-01781-5"
+}
+
+@article{Hosseini2011,
+	author = {R. Shah Hosseini and I. Entezari and S. Homayouni and M. Motagh and B. Mansouri},
+	title = {Classification of polarimetric {SAR} images using Support Vector Machines},
+	journal = {Canadian Journal of Remote Sensing},
+	volume = {37},
+	number = {2},
+	pages = {220-233},
+	year  = {2011},
+	publisher = {Taylor & Francis},
+	doi = {10.5589/m11-029},
+	
+	URL = { 
+	https://doi.org/10.5589/m11-029
+	
+	},
+	eprint = { 
+	https://doi.org/10.5589/m11-029
+	
+	}
+	
+}
+
+@article{Fan2015,
+	author = {Fan, J. and Zhang, F.u and Dongzhi, Z. and Wang, J.},
+	year = {2015},
+	month = {03},
+	pages = {},
+	title = {Oil Spill Monitoring Based on {SAR} Remote Sensing Imagery},
+	volume = {3},
+	journal = {Aquatic Procedia},
+	doi = {10.1016/j.aqpro.2015.02.234}
+}
+
+svmtutorialBURGES1999
+
+@ARTICLE{svmtutorialBURGES1999,
+	author = {Christopher J. C. Burges},
+	title = {A tutorial on support vector machines for pattern recognition},
+	journal = {Data Mining and Knowledge Discovery},
+	year = {1998},
+	volume = {2},
+	pages = {121--167}
+}
+
+@article{Zhang2010,
+	author = {Zhang, L. and Bin, Z. and Zhang, J. and Zhang, Y.},
+	year = {2010},
+	month = {01},
+	pages = {},
+	title = {Classification of Polarimetric {SAR} Image Based on Support Vector Machine Using Multiple-Component Scattering Model and Texture Features},
+	volume = {2010},
+	journal = {EURASIP Journal on Advances in Signal Processing},
+	doi = {10.1155/2010/960831}
+}
